syntax = "proto3";

option go_package = "github.com/isikhi/go-rate-limiter/app/pb";

option java_multiple_files = true;
option java_package = "io.grpc.examples.rate_limit";
option java_outer_classname = "RateLimitProto";


package rate_limit;

service RateLimit {
  rpc CheckRateLimit (CheckRequest) returns (CheckResponse) {}
}

message CheckRequest {
  // maybe add endpoint?
  string client_id = 1;
}

message CheckResponse {
  string client_id = 1;
  int64  remaining_tokens = 2;
  int64  max_token = 3;
  int64  expire_at = 4;
}